# Qrisp

./: pyproject.toml  requirements.txt
.github/workflows/: lin_mac.yml  main.yml  pyproject-dep  pyproject-dep.yml  qrisp_release_test.yml  qrisp_test.yml  qrisp_test_harden-runner.yml  qrisp_test_xdist.yml  xdist-cache.yml
